--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/Bardo5/v16
+/.vs/CSCN71030-21W_Bardo/v16/Browse.VC.opendb
