--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Bardo5/v16/.suo
+/.vs/Bardo5/v16/Browse.VC.db
+/.vs/
