ErrorChecking Added and dummy files created

--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
@@ -139,8 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ErrorChecking.cpp" />
     <ClCompile Include="Objects.h" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ErrorChecking.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
