--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="ErrorChecking.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ErrorChecking.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileIO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
