--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
@@ -18,14 +18,14 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Objects.h">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ErrorChecking.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileIO.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects.h">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
