Created Crafting.cpp file Created folders to organize test files

--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Crafting.cpp" />
     <ClCompile Include="Objects.h" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
