--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
@@ -13,10 +13,16 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Craft Item">
+    <Filter Include="Header Files\Crafting">
+      <UniqueIdentifier>{8c04b0a6-dfa5-4362-8bcd-7b758c3b1eb5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Crafting">
+      <UniqueIdentifier>{45089398-0b04-4368-ab4b-f09193e2126d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Crafting\Craft Item">
       <UniqueIdentifier>{d22337b4-de3c-44a5-af3f-550c386a425a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\See Inventory">
+    <Filter Include="Source Files\Crafting\See Inventory">
       <UniqueIdentifier>{c729d528-3962-490b-8ff7-c029eb11fb67}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -28,7 +34,45 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Crafting.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Crafting</Filter>
     </ClCompile>
+    <ClCompile Include="StarterMenu.cpp">
+      <Filter>Source Files\Crafting</Filter>
+    </ClCompile>
+    <ClCompile Include="craftItem.cpp">
+      <Filter>Source Files\Crafting\Craft Item</Filter>
+    </ClCompile>
+    <ClCompile Include="item.cpp">
+      <Filter>Source Files\Crafting</Filter>
+    </ClCompile>
+    <ClCompile Include="seeInventory.cpp">
+      <Filter>Source Files\Crafting\See Inventory</Filter>
+    </ClCompile>
+    <ClCompile Include="By_Search.cpp">
+      <Filter>Source Files\Crafting\See Inventory</Filter>
+    </ClCompile>
+    <ClCompile Include="By_Type.cpp">
+      <Filter>Source Files\Crafting\See Inventory</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="item.h">
+      <Filter>Header Files\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="inventory.h">
+      <Filter>Header Files\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="Crafting.h">
+      <Filter>Header Files\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="StarterMenu.h">
+      <Filter>Header Files\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="craftItem.h">
+      <Filter>Header Files\Crafting</Filter>
+    </ClInclude>
+    <ClInclude Include="seeInventory.h">
+      <Filter>Header Files\Crafting</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
