Dealer Object Type, Inherited Weapons Dealer, Buy Function for Weapons Dealer

--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
@@ -139,8 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Dealer.cpp" />
     <ClCompile Include="Objects.h" />
+    <ClCompile Include="Shop.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="WeaponsDealer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Dealer.h" />
+    <ClInclude Include="Shop.h" />
+    <ClInclude Include="WeaponsDealer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
