--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClCompile Include="Objects.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Psecurity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ErrorChecking.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileIO.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Psecurity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
