Updated UI, OtherFunctions Files, printInventory(), getItemStats()

--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Dealer.cpp" />
     <ClCompile Include="Objects.h" />
+    <ClCompile Include="OtherFunctions.cpp" />
     <ClCompile Include="Shop.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="WeaponsDealer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dealer.h" />
+    <ClInclude Include="OtherFuntions.h" />
     <ClInclude Include="Shop.h" />
     <ClInclude Include="WeaponsDealer.h" />
   </ItemGroup>
