--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Desktop\New folder\CSCN71030-21W_Bardo\Character.cpp" />
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="ErrorChecking.cpp" />
     <ClCompile Include="FileIO.cpp" />
     <ClCompile Include="Objects.h" />
@@ -147,7 +147,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Desktop\New folder\CSCN71030-21W_Bardo\Character.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="ErrorChecking.h" />
     <ClInclude Include="FileIO.h" />
     <ClInclude Include="Psecurity.h" />
