--- a/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
+++ b/CSCN71030-21W_Bardo/CSCN71030-21W_Bardo.vcxproj
@@ -143,6 +143,8 @@
     <ClCompile Include="By_Type.cpp" />
     <ClCompile Include="Crafting.cpp" />
     <ClCompile Include="craftItem.cpp" />
+    <ClCompile Include="ErrorChecking.cpp" />
+    <ClCompile Include="FileIO.cpp" />
     <ClCompile Include="item.cpp" />
     <ClCompile Include="Objects.h" />
     <ClCompile Include="seeInventory.cpp" />
@@ -152,6 +154,8 @@
   <ItemGroup>
     <ClInclude Include="Crafting.h" />
     <ClInclude Include="craftItem.h" />
+    <ClInclude Include="ErrorChecking.h" />
+    <ClInclude Include="FileIO.h" />
     <ClInclude Include="inventory.h" />
     <ClInclude Include="item.h" />
     <ClInclude Include="seeInventory.h" />
